crates/artemis_app/src/snapshots/artemis_app__operation__tests__skill_operation.snap
---
source: crates/artemis_app/src/operation.rs
expression: to_value(actual)
---
<skill_details>
<command
  location="/home/user/.artemis/skills/test-skill"
><![CDATA[This is a test skill command with instructions]]>
</command>
<resource>/home/user/.artemis/skills/test-skill/resource1.txt</resource>
<resource>/home/user/.artemis/skills/test-skill/resource2.md</resource>
</skill_details>
